--- a/templates/themes.html
+++ b/templates/themes.html
@@ -70,20 +70,20 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="../api/months"
+              href="../months"
               style="margin-left: 24px; padding-left: 9px; margin-right: 26px">Monthly
               Top 10</a>
           </li>
           <li class="nav-item">
             <a
               class="nav-link"
-              href="../api/domains"
+              href="../domains"
               style="margin-left: 12px; margin-right: 11px">Domains Top 10</a>
           </li>
           <li class="nav-item">
             <a
               class="nav-link active"
-              href="../api/themes"
+              href="../themes"
               style="padding-right: 0px; margin-left: 7px; margin-right: 17px">Theme
               Top 10</a>
           </li>
