--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
 
         <div class="row">
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
-              <a href="api/months">
+              <a href="months">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                   <div class="icon"><i class="bx bxl-dribbble"></i></div>
                   <h4 class="title">Top10 Monthly Projects</h4>
@@ -105,7 +105,7 @@
           </div>
           
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
-            <a href="api/domains">
+            <a href="domains">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon"><i class="bx bx-file"></i></div>
                 <h4 class="title">Top10 Domain Specific</h4>
@@ -115,7 +115,7 @@
           </div>
           
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
-            <a href="api/themes">
+            <a href="themes">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon"><i class="bx bx-tachometer"></i></div>
                 <h4 class="title">Top10 Theme Specific</h4>
