--- a/templates/themes.html
+++ b/templates/themes.html
@@ -7,7 +7,8 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       />
     <title>Top 10</title>
-    <link rel="stylesheet" href="/static/styles/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/styles/bootstrap/css/bootstrap.min.css"
+      />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Aclonica&amp;display=swap"
@@ -27,7 +28,8 @@
       rel="stylesheet"
       href="/static/styles/css/Footer-with-social-media-icons.css"
       />
-    <link rel="stylesheet" href="/static/styles/css/gradient-navbar-styles.css" />
+    <link rel="stylesheet" href="/static/styles/css/gradient-navbar-styles.css"
+      />
     <link rel="stylesheet" href="/static/styles/css/gradient-navbar.css" />
     <link rel="stylesheet" href="/static/styles/css/Hover-cards.css" />
     <link
@@ -39,6 +41,38 @@
     <link rel="stylesheet" href="/static/styles/css/Social-Icon-Circle.css" />
     <link rel="stylesheet" href="/static/styles/css/styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      const baseURL = "/api/themes/"
+      function loadFromApi(endpoint) {
+        const cardsContainer = document.getElementById("cards-container");
+        const cardHtml = (title = "", desc = "") => {
+          return `<div class="card card1">
+          <div class="card-body">
+            <h3 class="card-title">${title}</h3>
+            <p class="card-text small">
+              ${desc}
+            </p>
+            <div class="go-corner">
+              <div class="go-arrow"></div>
+            </div>
+          </div>
+        </div>`;
+        };
+        // Clear all old cards
+        cardsContainer.innerHTML = "";
+        fetch(baseURL + endpoint)
+          .then((response) => {
+            return response.json();
+          })
+          .then((data) => {
+            if (data.hackathons.length == 0) cardsContainer.innerHTML = "No hackathons found"
+            cardsContainer.innerHTML = "";
+            data.hackathons.forEach((item) => {
+              cardsContainer.innerHTML += cardHtml(item.title, item.desc);
+            });
+          });
+      }
+  </script>
   </head>
 
   <body class="align-self-center mx-auto">
@@ -119,11 +153,13 @@
           <button
             class="btn btn-primary"
             type="button"
-            style="background: rgb(13, 224, 253)">
-            hackathon</button><button
+            style="background: rgb(13, 224, 253)"
+            onclick="loadFromApi('HealthCare')">
+            Health care</button><button
             class="btn btn-primary"
             type="button"
-            style="background: rgb(13, 210, 253)">
+            style="background: rgb(13, 210, 253)"
+            onclick="loadFromApi('Open Innovaion')">
             Open innovation
           </button>
         </div>
@@ -131,11 +167,13 @@
           <button
             class="btn btn-primary"
             type="button"
-            style="background: rgb(13, 167, 253)">
+            style="background: rgb(13, 167, 253)"
+            onclick="loadFromApi('Education')">
             Education</button><button
             class="btn btn-primary"
             type="button"
-            style="background: #5983e8">
+            style="background: #5983e8"
+            onclick="loadFromApi('Environment')">
             Environment
           </button>
         </div>
