--- a/templates/themes.html
+++ b/templates/themes.html
@@ -182,118 +182,7 @@
     <p></p>
     <div></div>
     <p></p>
-    <div class="container" style="height: 920px">
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-      <div class="card card1">
-        <div class="card-body">
-          <h3 class="card-title">This is option 1</h3>
-          <p class="card-text small">
-            Card description with lots of great facts and interesting details.
-          </p>
-          <div class="go-corner">
-            <div class="go-arrow"></div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="container" style="height: 50px"></div>
     <footer id="footerpad" style="width: 100%; height: 162px">
       <div class="container">
         <div class="row w-full">
