--- a/templates/themes.html
+++ b/templates/themes.html
@@ -182,6 +182,9 @@
     <p></p>
     <div></div>
     <p></p>
+    <div class="container" style="height: 920px" id="cards-container">
+
+    </div>
     <div class="container" style="height: 50px"></div>
     <footer id="footerpad" style="width: 100%; height: 162px">
       <div class="container">
