--- a/templates/months.html
+++ b/templates/months.html
@@ -103,7 +103,9 @@
           <li class="nav-item"></li>
           <li class="nav-item"></li>
         </ul>
-        <img width="80" height="79" src="/static/styles/img/logo.png" />
+        <a href="../index">
+          <img width="80" height="79" src="/static/styles/img/logo.png" />
+        </a>
         <ul class="navbar-nav flex-grow-1">
           <li class="nav-item">
             <a
