--- a/templates/themes.html
+++ b/templates/themes.html
@@ -189,8 +189,7 @@
     <p></p>
     <div></div>
     <p></p>
-    <div class="flex flex-shrink-0 flex flex-wrap" style="height: 920px"
-      id="cards-container">
+    <div class="flex flex-shrink-0 flex flex-wrap" id="cards-container">
     </div>
     <footer id="footerpad" style="width: 100%; height: 162px">
       <div class="container">
