--- a/templates/months.html
+++ b/templates/months.html
@@ -188,8 +188,7 @@
     <p></p>
     <div></div>
     <p></p>
-    <div class="flex flex-shrink-0 flex flex-wrap" style="height: 920px"
-      id="cards-container">
+    <div class="flex flex-shrink-0 flex flex-wrap" id="cards-container">
     </div>
     <div class="container" style="height: 50px">
       <footer id="footerpad" style="width: 992px; height: 162px">
