--- a/templates/themes.html
+++ b/templates/themes.html
@@ -104,7 +104,7 @@
           <li class="nav-item"></li>
           <li class="nav-item"></li>
         </ul>
-        <a href="index">
+        <a href="../index">
           <img width="80" height="79" src="/static/styles/img/logo.png" />
         </a>
         <ul class="navbar-nav flex-grow-1">
