--- a/templates/themes.html
+++ b/templates/themes.html
@@ -166,8 +166,8 @@
             class="btn btn-primary"
             type="button"
             style="background: rgb(13, 210, 253)"
-            onclick="loadFromApi('Open Innovaion')">
-            Open innovation
+            onclick="loadFromApi('Open Innovation')">
+            Open Innovation
           </button>
         </div>
         <div class="btn-group" role="group">
