--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BizLand Bootstrap Template - Index</title>
+  <title>Hack-A-Thors: Find your next Hackathon idea here !!!</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,7 +59,7 @@
       <!-- <img id="thorlogo" src="assets/img/logo3.png" alt=""> -->
       <!-- <h1 class="logo"><a href="index.html">Hack-A-Thors<span>.</span></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index" class="logo"><img src="static/styles/img/logo3.png" alt=""></a>
+      <a href="#" class="logo"><img src="static/styles/img/logo3.png" alt=""></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -79,7 +79,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <h1>Welcome to <span>Hack-A-Thors</span></h1>
-      <h2>This is a place to find a plethora of projects</h2>
+      <h2>The place to find a plethora of projects</h2>
       <div class="d-flex">
         <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
         <a href="https://www.youtube.com/watch?v=t1p0UZvW63I" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
