--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="static/styles/img/favicon.png" rel="icon">
-  <link href="static/styles/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="static/styles/img/Safeimagekit-resized-imgpng.png" rel="icon">
+  <link href="static/styles/img/Logo_720_720px_500_500px.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -26,13 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="static/styles/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: BizLand - v3.7.0
-  * Template URL: https://bootstrapmade.com/bizland-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -56,9 +49,6 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-      <!-- <img id="thorlogo" src="assets/img/logo3.png" alt=""> -->
-      <!-- <h1 class="logo"><a href="index.html">Hack-A-Thors<span>.</span></a></h1> -->
-      <!-- Uncomment below if you prefer to use an image logo -->
       <a href="#" class="logo"><img src="static/styles/img/logo3.png" alt=""></a>
 
       <nav id="navbar" class="navbar">
@@ -98,7 +88,7 @@
               <a href="months">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                   <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                  <h4 class="title">Top10 Monthly Projects</h4>
+                  <h4 class="title"><a>Top 10 Monthly Projects</a> </h4>
                   <p class="description">Explore the top10 hackathon starring projects of each Month</p>
                 </div>
               </a>
@@ -108,7 +98,7 @@
             <a href="domains">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon"><i class="bx bx-file"></i></div>
-                <h4 class="title">Top10 Domain Specific</h4>
+                <h4 class="title"><a>Top10 Domain Specific</a></h4>
                 <p class="description">Explore the top10 hackathon starring projects specific to each Domain</p>
               </div>
             </a>
@@ -118,7 +108,7 @@
             <a href="themes">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon"><i class="bx bx-tachometer"></i></div>
-                <h4 class="title">Top10 Theme Specific</h4>
+                <h4 class="title"><a>Top10 Theme Specific</a></h4>
                 <p class="description">Explore the top10 hackathon starring projects specific to each Theme</p>
               </div>
             </a>
@@ -179,12 +169,13 @@
         <div class="section-title">
           <h2>About</h2>
           <h3>Know More <span>About Us</span></h3>
-          <p>Our inspiration behind starting this project lied in <br>solving a problem we ourselves faced <br> in a very practical manner <br> This website not just segregates list of starring projects of each category onto a unified platform but also plants a seed for the next project idea in the mind of the users :)</p>
+          <p>Our inspiration behind starting this project is to help students gather ideas for their next hackathons <br>  <br> Here, We update list of hackathon winning and starring projects in each categories every month</p>
+          <p>The inspiration from project ideas coupled with planting a seed for your next project idea</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-            <img src="static/styles/img/about.jpg" class="img-fluid" alt="">
+            <img src="static/styles/img/Untitled_design.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <h3></h3>
@@ -326,18 +317,6 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact Us</a></li>
             </ul>
           </div>
-
-          <!-- <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div> -->
-
           <div class="col-lg-4 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
             <p>Do connect us on social media handles to stay tuned to latest project list updates</p>
