--- a/templates/domains.html
+++ b/templates/domains.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       />
-    <title>Top 10</title>
+    <title>Top 10 Projects by Domain</title>
     <link rel="stylesheet" href="/static/styles/bootstrap/css/bootstrap.min.css"
       />
     <link
