--- a/templates/team.html
+++ b/templates/team.html
@@ -49,7 +49,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo"><img src="static/styles/img/logo3.png" alt=""></a>
+      <a href="index" class="logo"><img src="static/styles/img/logo3.png" alt=""></a>
 
       <nav id="navbar" class="navbar">
         <ul>
