updated youtube link

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
       <h2>The place to find a plethora of projects</h2>
       <div class="d-flex">
         <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
-        <a href="https://www.youtube.com/watch?v=t1p0UZvW63I" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+        <a href="https://www.youtube.com/watch?v=B7xq8cmi-C0" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
       </div>
     </div>
   </section><!-- End Hero -->
